[gd_scene load_steps=22 format=3 uid="uid://u47i3d01fsnq"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_1w0at"]
[ext_resource type="Texture2D" uid="uid://csv6axkat2gqy" path="res://assets/ship.png" id="1_o66c7"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_byi4f"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_n4ya8"]
[ext_resource type="Resource" uid="uid://dgxg6x3ugs2at" path="res://player_ship/ship_move_stats.tres" id="4_ohusl"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_81xdv"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="6_l7j8v"]
[ext_resource type="PackedScene" uid="uid://dwmjthfb17u61" path="res://projectiles/laser.tscn" id="7_yv8ve"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_nxep3"]
[ext_resource type="Texture2D" uid="uid://cmfx7uwiptxam" path="res://assets/ship_flame.png" id="10_wt5qr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t1yni"]
atlas = ExtResource("1_o66c7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_48v06"]
atlas = ExtResource("1_o66c7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7snby"]
atlas = ExtResource("1_o66c7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o30pe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1yni")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48v06")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7snby")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1va8r"]
atlas = ExtResource("10_wt5qr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhpjb"]
atlas = ExtResource("10_wt5qr")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbcge"]
atlas = ExtResource("10_wt5qr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt4vv"]
atlas = ExtResource("10_wt5qr")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj4im"]
atlas = ExtResource("10_wt5qr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjckf"]
atlas = ExtResource("10_wt5qr")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p7dmq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1va8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhpjb")
}],
"loop": true,
"name": &"bank_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbcge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt4vv")
}],
"loop": true,
"name": &"bank_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj4im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjckf")
}],
"loop": true,
"name": &"center",
"speed": 10.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_1w0at")

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_o30pe")
animation = &"center"
autoplay = "center"

[node name="FlameAnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_p7dmq")
animation = &"bank_right"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_byi4f")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_n4ya8")
move_component = NodePath("../MoveComponent")
move_stats = ExtResource("4_ohusl")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_81xdv")
actor = NodePath("..")

[node name="LeftCannon" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="RightCannon" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("6_l7j8v")
scene = ExtResource("7_yv8ve")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_nxep3")
sprite = NodePath("../Anchor")
scale_amount = Vector2(1.2, 1.2)
